# pyPERDIX

./: .gitignore  MANIFEST.in  README.md  perdix_config copy.json  perdix_config.bk.json  perdix_config.json  pyproject.toml
docs/: RUNTIME_FLOW.md
input/: hex.ply
perdix_py/: __init__.py  _output_impl.py  _route_impl.py  _seqdesign_impl.py  basepair.py  basepair_edge_ops.py  basepair_ghost.py  basepair_junction.py  basepair_mesh.py  basepair_output.py  chimera_bild.py  config.py  data_dna.py  data_geom.py  data_mesh.py  data_prob.py  debug_dump.py  exam_perdix.py  exam_perdix_cases.py  exam_perdix_shapes.py  input.py  input_geom.py  input_svg.py  list_utils.py  main.py  mani.py  math_utils.py  modgeo.py  modgeo_neighbors.py  modgeo_scale.py  mvp.py  naming.py  output.py  para.py  reference_frame.py  resource_utils.py  route.py  section.py  seqdesign.py  span_tree.py  (+4 more)
perdix_py/resources/: __init__.py  lamda_perdix.txt  m13mp18_perdix.txt
pyperdix/: __init__.py  api.py
tests/: json_to_bild.py  perdix_test_config copy.json  perdix_test_config.json  test_bild.py  test_package_install.py  test_stability_fixes.py  test_validation.py
tests/bild_out/: triangle_l1_42bp_mesh_post_route_dna_base_scaf_pos.bild  triangle_l1_42bp_mesh_post_route_dna_base_scaf_pos_ref.bild  triangle_l1_42bp_mesh_post_route_dna_base_stap_pos.bild  triangle_l1_42bp_mesh_post_route_dna_base_stap_pos_ref.bild  triangle_l1_42bp_mesh_post_route_node_pos.bild  triangle_l1_42bp_mesh_post_route_node_pos_ref.bild  triangle_l2_42bp_mesh_post_route_dna_base_scaf_pos.bild  (+5 more)
(+188 files in other folders)
